<resources>
    <string name="app_name">BaseDevelopJetpack</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="home">首页</string>
    <string name="knowledge_system">知识体系</string>
    <string name="navigation">导航</string>
    <string name="project">项目</string>
    <string name="wechat">公众号</string>

</resources>
